--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,17 @@
   sans-serif;
 }
 
+button{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+
 .modal-backdrop {
   position: fixed;
   top: 0;
@@ -24,4 +35,9 @@
   min-height: 200px;
   background-color: white;
   padding: 25px;
+  overflow: scroll;
+}
+
+img {
+  width: 50%;
 }
